--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,8 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
+*.* linguist-language=TSQL
+
 
 ###############################################################################
 # Set default behavior for command prompt diff.
