--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 ###############################################################################
 * text=auto
 *.* linguist-language=TSQL
+*.* linguist-language=XML
 
 
 ###############################################################################
